--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/site-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Miro Sounds | Music and Artis Booking 
+      Miro Sounds | Music and Artist Booking 
     </title>
   </head>
   <body>
