--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>
       Miro Sounds | Music and Artist Booking 
     </title>
+    <meta name="description" content="Curating exceptional music for unforgettable events
+    " />
   </head>
   <body>
     <div id="root"></div>
