updated video and csical media image

--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     </title>
     <meta name="description" content="Curating exceptional music for unforgettable events
     " />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://mirosounds.com/" />
+    <meta property="og:title" content="Miro Sounds | Music and Artist Booking" />
+    <meta property="og:description" content="Curating exceptional music for unforgettable events" />
+    <meta property="og:image" content="https://mirosounds.com/site-preview.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://mirosounds.com/" />
+    <meta property="twitter:title" content="Miro Sounds | Music and Artist Booking" />
+    <meta property="twitter:description" content="Curating exceptional music for unforgettable events" />
+    <meta property="twitter:image" content="https://mirosounds.com/site-preview.jpg" />
   </head>
   <body>
     <div id="root"></div>
