--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <meta property="og:title" content="Miro Sounds | Music and Artist Booking" />
     <meta property="og:description" content="Curating exceptional music for unforgettable events" />
     <meta property="og:image" content="https://mirosounds.com/site-preview.jpg" />
+    <meta property="og:image:width" content="206" />
+    <meta property="og:image:height" content="206" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:alt" content="Miro Sounds - Music and Artist Booking" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
