--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:url" content="https://mirosounds.com/" />
     <meta property="og:title" content="Miro Sounds |  Music & Entertainment" />
     <meta property="og:description" content="Curating outstanding music for unforgettable events" />
-    <meta property="og:image" content="https:/miro-sounds.vercel.app/site-preview.png" />
+    <meta property="og:image" content="https://mirosounds.com/site-preview.png" />
     <meta property="og:image:width" content="206" />
     <meta property="og:image:height" content="206" />
     <meta property="og:image:type" content="image/jpeg" />
