--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/miro-marron.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Miro Sounds | Music and Artist Booking 
+      Miro Sounds
     </title>
     <meta name="description" content="Curating exceptional music for unforgettable events
     " />
@@ -13,7 +13,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://mirosounds.com/" />
-    <meta property="og:title" content="Miro Sounds |  Music & Entertainment" />
+    <meta property="og:title" content="Miro Sounds" />
     <meta property="og:description" content="Curating exceptional music for unforgettable events" />
     <meta property="og:image" content="https://mirosounds.com/site-preview.png" />
     <meta property="og:image:width" content="206" />
@@ -24,7 +24,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://mirosounds.com/" />
-    <meta property="twitter:title" content="Miro Sounds | Music and Artist Booking" />
+    <meta property="twitter:title" content="Miro Sounds" />
     <meta property="twitter:description" content="Curating exceptional music for unforgettable events" />
     <meta property="twitter:image" content="https://mirosounds.com/site-preview.jpg" />
   </head>
