uploaded mobile video and gogle search console txt meta

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <meta property="twitter:title" content="Miro Sounds" />
     <meta property="twitter:description" content="Curating exceptional music for unforgettable events" />
     <meta property="twitter:image" content="https://mirosounds.com/site-preview.jpg" />
+
+    <meta name="google-site-verification" content="aL4_vN8sVjRAekmBLbHn0RzY7mxZO77j8jv1JdIJHeM" />
   </head>
   <body>
     <div id="root"></div>
